fixing jump

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
 
 .animate
 {
+	animation: jump 500ms;
 }
 
 #block
